trabajando con las plantillas

--- a/taxigo/choferes/templates/index.html
+++ b/taxigo/choferes/templates/index.html
@@ -4,8 +4,10 @@
 	<title>TaxiGo!</title>
 </head>
 <body>
-	<h1>Hola Soy TaxiGO!</h1>
-	<h2>Choferes disponibles</h2>
+	<header>
+		<h1>Hola Soy TaxiGO!</h1>
+		<h2>Choferes disponibles</h2>
+	</header>
 	<ul>
 		{% for chofer in choferes %}
 		<li>{{chofer.nombre}}</li>
